syntax = "proto3";

package com.nmatute.grpcinterface.generated;

option java_multiple_files = true; 
option java_package = "com.nmatute.grpcinterface.generated"; 

//Proto autogenerated classname
option java_outer_classname = "ChatServiceProto"; 

service ChatService {
    //Unary Communication
    rpc sendMessage (SendMessage) returns (ReceiveMessage) {}
    //Unidirectional Stream client -> server
    rpc sendMultipleMessages (stream SendMessage) returns (ReceiveMessage) {}
    //Unidirectional Stream server -> client
    rpc receiveMultipleMessages (SendMessage) returns (stream ReceiveMessage) {}
    //Bidirectional Stream
    rpc sendAndReceiveMultipleMessages (stream SendMessage) returns (stream ReceiveMessage) {}
}

message SendMessage {
    uint32 to = 1;
    string message = 2;
}

message ReceiveMessage {
    uint32 from = 1;
    string message = 2;
}
